Moved to an SQLite DB, updated the LocationItem model and its comments, removed old code

--- a/WeatherFinderAPI/appsettings.json
+++ b/WeatherFinderAPI/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Filename=./WeatherFinderDB.db"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
