Updated to use an Azure SQL database and changed the types on the LocationItem model

--- a/WeatherFinderAPI/appsettings.json
+++ b/WeatherFinderAPI/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Filename=./WeatherFinderDB.db"
+    "DefaultConnection": ""
   },
   "Logging": {
     "LogLevel": {
