Added some Razor pages and got the home page fully set up. Jquery and Boostrap have also been added to the project.

--- a/.gitignore
+++ b/.gitignore
@@ -338,3 +338,6 @@ ASALocalRun/
 
 # BeatPulse healthcheck temp database
 healthchecksdb
+WeatherFinderAPI/WeatherFinderAPI.csproj
+WeatherFinderAPI/WeatherFinderAPI.csproj
+WeatherFinderAPI/appsettings.json
