Removed old code, old db, and useless usings. Updated the LocationItemsController to use ints as parameters for GET/DELETE by an ID.

--- a/.gitignore
+++ b/.gitignore
@@ -341,3 +341,4 @@ healthchecksdb
 WeatherFinderAPI/WeatherFinderAPI.csproj
 WeatherFinderAPI/WeatherFinderAPI.csproj
 WeatherFinderAPI/appsettings.json
+WeatherFinderAPI/appsettings.json
